// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlashMessage /> should be able to render correctly when error type 1`] = `
<body>
  <div>
    <li
      class="sc-bdfBwQ iHLimE"
      type="error"
    >
      <div
        class="MuiContainer-root sc-gsTCUz kXSENp MuiContainer-maxWidthSm"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
        <h6
          class="MuiTypography-root sc-dlfnbm MuiTypography-h6"
        >
          Message
        </h6>
      </div>
    </li>
  </div>
</body>
`;

exports[`<FlashMessage /> should be able to render correctly when success type 1`] = `
<body>
  <div>
    <li
      class="sc-bdfBwQ iTuIRM"
      type="success"
    >
      <div
        class="MuiContainer-root sc-gsTCUz kXSENp MuiContainer-maxWidthSm"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
        <h6
          class="MuiTypography-root sc-dlfnbm MuiTypography-h6"
        >
          Message
        </h6>
      </div>
    </li>
  </div>
</body>
`;
